{{$NEXT}}

0.4.0  2022-05-18T09:17:23+12:00
    - Add face lock() attribute. Use it to protect iterate-chars() and
      iterate-glyphs() anf face update methods for improved thread-safety
    - Change from CPAN to zef repository

0.3.11  2022-02-15T05:39:32+13:00
    - Fix failing tests in Rakudo 2022.02

0.3.10  2022-02-04T07:55:53+13:00
    - Fix test for pending Rakudo 2022.02 release; niner++

0.3.9  2022-02-02T12:05:34+13:00
    - Add Pointer coercement. For the benefit of FontConfig's query-ft-face()
      method
    - Tweaks to Build.pm6 and Makiefile.in

0.3.8  2021-07-02T13:22:29+12:00
    - Add $face.index-from-glyph-name() method
    - Hide ft-try() subroutine and face() method from backtrace.

0.3.7
    - Allow Font::FreeType face() and version() methods to be called
      at the class level. In particular allow `Font::FreeType.face(..)`
      rather than `Font::FreeType.new.face(...)`
    - port examples/magick.raku from Perl
    - Add :%callbacks option to Font::FreeType::Outline.decompose() method.
      Option ported from the Perl outline_decompose() method.
    - Add native method ft6_bitmap_get_pixels(). Speed up the bitmap pixels
      method. Improve the performance of bin/font-say examples/magick.raku, etc
0.3.6
    - Rename GlyphImage bold() method to set-bold().
    - Add methods iterate-glyphs(), iterate-chars().
0.3.5
    - Add TT_OS2 panose() and achVendID() accessors. Also TT_PCLT typeface()
      and fileName() accessors
0.3.4
    - Corrections to TT_PCLT record structure and TT_Post.italicAngle()
      accessor
0.3.3
    - Added Font::FreeType::Raw::TT_SFnt - mappings to raw TrueType
      font tables
0.3.2
    - Documentation fixes #5
    - Add method $face.glyph-name-from-index
0.3.1
    - Documentation changes
0.3.0
    - native -> raw in class names and attributes. Follow lead of LibXML
      -- Font::FreeType::Native -> Font::FreeeType::Raw
      -- $obj.native -> $obj.raw