@@ -7,7 +7,6 @@ use Font::FreeType::Raw::Defs;
 
 my @files = <t/fonts/DejaVuSans.ttf t/fonts/DejaVuSerif.ttf t/fonts/OldStandard-Bold.otf>;
 my @faces = @files.map: { Font::FreeType.new.face: $_; }
-my @locks = @faces.map: {Lock.new;}
 my $flags = FT_LOAD_NO_SCALE;
 
 lives-ok {
@@ -15,7 +14,7 @@ lives-ok {
         my $w = 0;
         my $h = 0;
         for @faces -> $face {
-            for $face.iterate-glyphs(:$flags) {
+            $face.forall-glyphs: :$flags, {
                 $w += .width;
                 $h += .height;
             }
@@ -28,7 +27,7 @@ lives-ok {
         my $w = 0;
         my $h = 0;
         for @faces -> $face {
-            for $face.iterate-chars(:$flags) {
+            $face.forall-glyphs: :$flags, {
                 $w += .width;
                 $h += .height;
             }
